# flatten

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
src/: error.rs  flatten.rs  main.rs
