[package]
name = "flatten"
version = "0.1.0"
authors = ["vollkorntomate <thomas@vollkorntomate.de>"]
description = ""
repository = ""
readme = "README.md"
license = "Apache-2.0"
keywords = []
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
